# process_scanned_photos

./: .gitignore  README.md  images_to_pdf.py  pyproject.toml  requirements.txt  split_scan_pages.py
scripts/: run_process_journal_pipeline.sh
src/process_scanned_photos/: images_to_pdf.py  process_journal_pipeline.py  rotate_photos.py  split_scan_pages.py
